fix footer on small displays

--- a/assets/app.css
+++ b/assets/app.css
@@ -32,10 +32,7 @@ body {
 }
 
 #footer {
-    position: fixed;
-    left: 0;
-    right: 0;
-    bottom: 5px;
+    margin-top: 50px;
     font-size: 12px;
 }
 
